# RealTalk

./: .gitignore  .gitmodules  .project.el  CMakeLists.txt  README.md  Vagrantfile  bootstrap.sh
include/real_talk/code/: and_cmd.h  arithmetic_negate_cmd.h  array_cmd_trait.h  call_cmd.h  call_native_cmd.h  cast_cmd.h  cast_cmd_generator.h  cmd.h  cmd_reader.h  cmd_visitor.h  code.h  code_container.h  code_container_visitor.h  code_container_writer.h  code_generator.h  create_and_init_array_cmd.h  create_and_init_global_var_cmd.h  create_and_init_local_var_cmd.h  create_array_cmd.h  create_global_cmd.h  create_global_var_cmd.h  create_local_var_cmd.h  data_type_size.h  destroy_local_var_cmd.h  destroy_local_vars_and_jump_cmd.h  destroy_local_vars_cmd.h  div_cmd.h  end_cmd.h  equal_cmd.h  exe.h  exe_reader.h  exe_writer.h  greater_cmd.h  greater_or_equal_cmd.h  id_address.h  id_addresses.h  id_size.h  jump_cmd.h  less_cmd.h  less_or_equal_cmd.h  (+32 more)
include/real_talk/compiler/: cmd.h  compiler.h  compiler_app.h  compiler_cmd.h  compiler_config.h  compiler_config_parser.h  file_parser.h  import_file_searcher.h  msg_printer.h  simple_compiler_config_parser.h  simple_import_file_searcher.h  simple_msg_printer.h
include/real_talk/lexer/: lexer.h  lexer_factory.h  simple_lexer.h  simple_lexer_factory.h  token_info.h
include/real_talk/linker/: base_linker.h  exe_linker.h  lib_linker.h  linker.h  linker_app.h  linker_cmd.h  linker_config.h  linker_config_parser.h  linker_factory.h  msg_printer.h  output_file_type.h  simple_linker_config_parser.h  simple_linker_factory.h  simple_msg_printer.h
include/real_talk/parser/: and_node.h  arg_def_node.h  array_alloc_node.h  array_alloc_with_init_node.h  array_alloc_without_init_node.h  array_data_type_node.h  array_size_node.h  assign_node.h  base_array_alloc_node.h  base_binary_expr_node.h  base_func_def_node.h  base_unary_expr_node.h  binary_expr_node.h  bool_data_type_node.h  bool_node.h  bounded_array_data_type_node.h  bounded_array_size_node.h  branch_node.h  break_node.h  call_node.h  char_data_type_node.h  char_node.h  continue_node.h  control_flow_transfer_node.h  data_type_node.h  def_node.h  default_node.h  div_node.h  double_data_type_node.h  double_node.h  else_if_node.h  equal_node.h  expr_node.h  expr_stmt_node.h  file_parser.h  func_def_node.h  func_def_with_body_node.h  func_def_without_body_node.h  greater_node.h  greater_or_equal_node.h  (+47 more)
include/real_talk/semantic/: arg_def_analysis.h  array_data_type.h  base_expr_analysis.h  bool_data_type.h  bool_lit.h  bounded_array_data_type.h  cast_handler.h  cast_resolver.h  char_data_type.h  char_lit.h  common_expr_analysis.h  control_flow_transfer_analysis.h  data_storage.h  data_type.h  data_type_converter.h  data_type_visitor.h  def_analysis.h  def_analysis_visitor.h  double_data_type.h  double_lit.h  expr_analysis.h  func_data_type.h  func_def_analysis.h  global_data_storage.h  global_var_def_analysis.h  id_analysis.h  import_analysis.h  import_file_searcher.h  int_data_type.h  int_lit.h  lit.h  lit_analysis.h  lit_parser.h  local_data_storage.h  local_var_def_analysis.h  long_data_type.h  long_lit.h  node_semantic_analysis.h  return_analysis.h  scope_analysis.h  (+17 more)
include/real_talk/stdlib/: io.h
include/real_talk/util/: dir_creator.h  endianness.h  errors.h  file.h  file_searcher.h  logger.h  simple_dir_creator.h  simple_file.h  simple_file_searcher.h
include/real_talk/vm/: array_value.h  bool_value.h  char_value.h  data_storage.h  double_value.h  func_frame.h  func_value.h  int_value.h  long_value.h  msg_printer.h  native_func.h  native_func_linker.h  native_func_storage.h  native_func_value.h  simple_msg_printer.h  simple_native_func_linker.h  simple_native_func_storage.h  simple_vm.h  simple_vm_config_parser.h  simple_vm_factory.h  string_value.h  values.h  var_address_value.h  vm.h  vm_app.h  vm_cmd.h  vm_config.h  vm_config_parser.h  vm_factory.h
src/real_talk/code/: cmd_reader.cpp  code.cpp  code_container.cpp  code_generator.cpp  exe.cpp  id_address.cpp  id_addresses.cpp  id_size.cpp  module.cpp  module_reader.cpp  simple_cast_cmd_generator.cpp  simple_code_container_writer.cpp  simple_code_generator.cpp  simple_exe_reader.cpp  simple_module_reader.cpp  simple_module_writer.cpp
src/real_talk/compiler/: compiler.cpp  compiler_app.cpp  compiler_config.cpp  compiler_config_parser.cpp  file_parser.cpp  main.cpp  simple_compiler_config_parser.cpp  simple_import_file_searcher.cpp  simple_msg_printer.cpp
src/real_talk/lexer/: lexer.cpp  simple_lexer.cpp  simple_lexer_factory.cpp  token_info.cpp
src/real_talk/linker/: base_linker.cpp  exe_linker.cpp  lib_linker.cpp  linker_app.cpp  linker_config.cpp  main.cpp  simple_linker_config_parser.cpp  simple_linker_factory.cpp  simple_msg_printer.cpp
src/real_talk/parser/: parser.cpp  simple_file_parser.cpp  simple_parser.cpp  simple_parser_factory.cpp
src/real_talk/semantic/: arg_def_analysis.cpp  array_data_type.cpp  base_expr_analysis.cpp  bool_data_type.cpp  bool_lit.cpp  bounded_array_data_type.cpp  cast_handler.cpp  cast_resolver.cpp  char_data_type.cpp  char_lit.cpp  common_expr_analysis.cpp  control_flow_transfer_analysis.cpp  data_storage.cpp  data_type.cpp  def_analysis.cpp  double_data_type.cpp  double_lit.cpp  expr_analysis.cpp  func_data_type.cpp  func_def_analysis.cpp  global_data_storage.cpp  global_var_def_analysis.cpp  id_analysis.cpp  import_analysis.cpp  int_data_type.cpp  int_lit.cpp  lit.cpp  lit_analysis.cpp  lit_parser.cpp  local_data_storage.cpp  local_var_def_analysis.cpp  long_data_type.cpp  long_lit.cpp  node_semantic_analysis.cpp  return_analysis.cpp  scope_analysis.cpp  semantic_analysis.cpp  semantic_analysis_result.cpp  semantic_analyzer.cpp  semantic_error.cpp  (+12 more)
src/real_talk/stdlib/: io.cpp
src/real_talk/util/: errors.cpp  logger.cpp  simple_dir_creator.cpp  simple_file.cpp  simple_file_searcher.cpp
src/real_talk/vm/: array_value.cpp  data_storage.cpp  main.cpp  (+9 more)
stdlib/: Makefile
test/: main.cpp
test/fixtures/: file.txt
test/real_talk/: test_config.h
test/resources/: program.rt
(+49 files in other folders)
